[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="WaitingLabel" type="Label" parent="."]
pause_mode = 2
visible = false
margin_left = 256.0
margin_top = 176.0
margin_right = 384.0
margin_bottom = 198.0
text = "Waiting for server..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
pause_mode = 2
margin_left = 278.039
margin_top = 161.258
margin_right = 366.039
margin_bottom = 213.258
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 88.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="GameCode" type="LineEdit" parent="Menu/VBoxContainer"]
margin_right = 88.0
margin_bottom = 24.0
placeholder_text = "Game Code"

[node name="TextureButton" type="TextureButton" parent="Menu/VBoxContainer/GameCode"]
margin_right = 88.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 28.0
margin_right = 88.0
margin_bottom = 48.0
alignment = 1

[node name="HostButton" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 3.0
margin_right = 45.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Host"

[node name="JoinButton" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 84.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Join"

[node name="GameCode" type="Label" parent="."]
pause_mode = 2
visible = false
margin_right = 101.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Game Code: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/VBoxContainer/GameCode/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
